@@ -63,28 +63,23 @@
  1. 堆配置
      - -Xms: 初始堆大小
      - -Mmx: 最大堆大小
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+     - -XX:NewSize=n: 设置年轻代大小
+     - -XX:NewRatio=n: 设置年轻代和年老代的比值
+     - -XX:SurvivorRatio=n: 年轻代中的Eden和两个Servivor区的比值
+     - -XX:MaxPermSize=n: 设置永久代大小
+ 2. 收集器配置
+     - -XX:+UseSerialGC: 设置串行收集器
+     - -XX:+UseParallelGC: 设置并行收集器
+     - -XX:+UseParalledlOldGC: 设置并行年老代收集器
+     - -XX:+UseConcMarkSweepGC: 设置并发收集器
+ 3. 并行收集器
+     - -XX:ParallelGCThreads=n: 设置并行收集器收集时使用的CPU数,即并行收集线程数
+     - -XX:MaxGCPauseMillis=n: 设置并行收集最大暂停时间
+     - -XX:GCTimeRatio=n: 设置垃圾回收时间占程序运行时间的百分比
+ 4. 并发收集器设置
+     - -XX:+CMSIncrementalMode: 设置为增量模式,适用于单CPU
+     - -XX:ParallelGCThreads=n: 设置并发收集器年轻代收集方式为并行收集器时,使用的CPU数
+     
+     
 
 
